Change to portfolio

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UI</title>
+  <title>Portfolio</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <!-- <script defer src="js/main.js"></script> -->
@@ -14,7 +14,7 @@
     <section class="left_box">
       <div class="nav_wrap">
         <div class="inner">
-          <h2 class="title">Component</h2>
+          <h2 class="title">Portfolio</h2>
             <ul class="list">
               <li data-cont="alert.html"><span>Alert</span></li>
               <li data-cont="button.html"><span>Button</span></li>
@@ -22,37 +22,36 @@
               <li data-cont="checkbox.html"><span>Checkbox</span></li>
               <li data-cont="confirm.html"><span>Confirm</span></li>
               <li data-cont="input.html"><span>Input</span></li>
-              <li data-cont="under_construction.html"><span>List</span></li>
+              <!-- <li data-cont="under_construction.html"><span>List</span></li> -->
               <li data-cont="modal.html"><span>Modal</span></li>
-              <li data-cont="under_construction.html"><span>Popup</span></li>
-              <!-- <li data-cont="pagination.html"><span>Pagination</span></li> -->
+              <!-- <li data-cont="under_construction.html"><span>Popup</span></li> -->
               <li data-cont="progress.html"><span>Progress</span></li>
               <li data-cont="selector.html"><span>Selector</span></li>
               <li data-cont="table.html"><span>Table</span></li>
-              <li data-cont="under_construction.html"><span>Toast</span></li>
-              <li data-cont="under_construction.html"><span>Tooltip</span></li>
+              <!-- <li data-cont="under_construction.html"><span>Toast</span></li> -->
+              <!-- <li data-cont="under_construction.html"><span>Tooltip</span></li> -->
+              <!-- <li data-cont="pagination.html"><span>Pagination</span></li> -->
             </ul>
         </div>
       </div>
       <div class="nav_wrap">
         <div class="inner">
-          <h2 class="title">Layout</h2>
+          <h2 class="title">Clone Coding</h2>
           <ul class="list">
-            <li data-cont="under_construction.html"><span>Flex</span></li>
-            <li data-cont="under_construction.html"><span>Column</span></li>
+            <li data-cont="landing_page.html"><a href="https://elegant-begonia-dba8ef.netlify.app/" target="_blank"><span>Starbucks</span></a></li>
+            <li data-cont="landing_page.html"><a href="https://unrivaled-longma-60ac49.netlify.app/" target="_blank"><span>Movv</span></a></li>
+            <li data-cont="landing_page.html"><a href="https://silver-frangollo-742fe8.netlify.app/" target="_blank"><span>농심 nav</span></a></li>
           </ul>
         </div>
       </div>
       <div class="nav_wrap">
         <div class="inner">
-          <h2 class="title">Mixed</h2>
+          <h2 class="title">Portfolio</h2>
           <ul class="list">
-            <li data-cont="under_construction.html"><span>Dropdown</span></li>
-            <li data-cont="under_construction.html"><span>ButtonGroup</span></li>
-            <li data-cont="under_construction.html"><span>InputGroup</span></li>
-            <li data-cont="under_construction.html"><span>Pagination</span></li>
-            <li data-cont="under_construction.html"><span>Selector</span></li>
-            <li data-cont="under_construction.html"><span>AutoComplete</span></li>
+            <li data-cont="landing_page.html"><a href="https://curious-jalebi-47dfad.netlify.app/" target="_blank"><span>Login Page</span></a></li>
+            <li data-cont="landing_page.html"><a href="https://effervescent-starburst-f31889.netlify.app/" target="_blank"><span>Tiffany & Co.</span></a></li>
+            <li data-cont="landing_page.html"><a href="https://ephemeral-gnome-9c4e5e.netlify.app/" target="_blank"><span>BARBOUR</span></a></li>
+            <li data-cont="landing_page.html"><a href="https://cerulean-biscotti-a6f0e2.netlify.app/" target="_blank"><span>NARS</span></a></li>
           </ul>
         </div>
       </div>
