--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="left_box">
       <div class="nav_wrap">
         <div class="inner">
-          <h2 class="title">Portfolio</h2>
+          <h2 class="title">UI-component</h2>
             <ul class="list">
               <li data-cont="alert.html"><span>Alert</span></li>
               <li data-cont="button.html"><span>Button</span></li>
