--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         <div class="inner">
           <h2 class="title">UI-component</h2>
             <ul class="list">
-              <li data-cont="alert.html"><span>Alert</span></li>
-              <li data-cont="button.html"><span>Button</span></li>
-              <li data-cont="card.html"><span>Card</span></li>
-              <li data-cont="checkbox.html"><span>Checkbox</span></li>
-              <li data-cont="confirm.html"><span>Confirm</span></li>
-              <li data-cont="input.html"><span>Input</span></li>
+              <li class="click" data-cont="alert.html"><span>Alert</span></li>
+              <li class="click" data-cont="button.html"><span>Button</span></li>
+              <li class="click" data-cont="card.html"><span>Card</span></li>
+              <li class="click" data-cont="checkbox.html"><span>Checkbox</span></li>
+              <li class="click" data-cont="confirm.html"><span>Confirm</span></li>
+              <li class="click" data-cont="input.html"><span>Input</span></li>
               <!-- <li data-cont="under_construction.html"><span>List</span></li> -->
-              <li data-cont="modal.html"><span>Modal</span></li>
+              <li class="click" data-cont="modal.html"><span>Modal</span></li>
               <!-- <li data-cont="under_construction.html"><span>Popup</span></li> -->
-              <li data-cont="progress.html"><span>Progress</span></li>
-              <li data-cont="selector.html"><span>Selector</span></li>
-              <li data-cont="table.html"><span>Table</span></li>
+              <li class="click" data-cont="progress.html"><span>Progress</span></li>
+              <li class="click" data-cont="selector.html"><span>Selector</span></li>
+              <li class="click" data-cont="table.html"><span>Table</span></li>
               <!-- <li data-cont="under_construction.html"><span>Toast</span></li> -->
               <!-- <li data-cont="under_construction.html"><span>Tooltip</span></li> -->
               <!-- <li data-cont="pagination.html"><span>Pagination</span></li> -->
