--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <li data-cont="landing_page.html"><a href="https://effervescent-starburst-f31889.netlify.app/" target="_blank"><span>Tiffany & Co.</span></a></li>
             <li data-cont="landing_page.html"><a href="https://ephemeral-gnome-9c4e5e.netlify.app/" target="_blank"><span>BARBOUR</span></a></li>
             <li data-cont="landing_page.html"><a href="https://cerulean-biscotti-a6f0e2.netlify.app/" target="_blank"><span>NARS</span></a></li>
+            <li data-cont="landing_page.html"><a href="https://github.com/Sienna98/shaft-finder" target="_blank"><span>SHAFT FINDER</span></a></li>
           </ul>
         </div>
       </div>
