--- a/landing_page.html
+++ b/landing_page.html
@@ -14,7 +14,7 @@
         <li class="left"></li>
         <li class="right"></li>
       </ul>
-    <h1 class="hello">HELLO</h1>
+    <h1 class="hello"><span class="bold">SIEUN</span><br>PORTFOLIO</h1>
   </div>
 </body>
 </html>
